// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Formatted Address should render 1`] = `
<div>
  <div
    class="w-64 inline-block undefined"
  >
    <div
      class="sc-AxjAm hQFgsK"
    >
      <div>
        <div
          class="relative"
        >
          <button
            class="float-right outline-none focus:outline-none"
            data-testid="dropdown__toggle"
          >
            <div
              class="sc-AxirZ eEbZjj"
              height="20"
              width="20"
            >
              <svg>
                settings.svg
              </svg>
            </div>
          </button>
        </div>
        <div />
      </div>
      <div>
        <div
          class="sc-AxiKw dYzaxp border-theme-primary-contrast -mr-2 undefined"
        />
        <div
          class="sc-AxiKw dYzaxp border-theme-primary-contrast"
        />
      </div>
      <div
        class="mt-4 truncate max-w-12"
      />
      <div
        class="font-bold text-theme-neutral-800"
      />
    </div>
  </div>
</div>
`;

exports[`Formatted Address should render blank 1`] = `
<div>
  <div
    class="w-64 inline-block undefined"
  >
    <div
      class="sc-AxjAm hQFgsK"
    >
      <div>
        <div
          class="sc-AxiKw dYzaxp border-theme-primary-contrast -mr-2"
        />
        <div
          class="sc-AxiKw dYzaxp border-theme-primary-contrast"
        />
      </div>
      <div
        class="mt-4 text-sm text-theme-primary-contrast"
      >
        New wallet
      </div>
      <div
        class="mt-1 text-sm text-theme-primary-contrast"
      >
        Balance
      </div>
    </div>
  </div>
</div>
`;

exports[`Formatted Address should render with wallet data 1`] = `
<div>
  <div
    class="w-64 inline-block undefined"
  >
    <div
      class="sc-AxjAm hQFgsK"
    >
      <div>
        <div
          class="relative"
        >
          <button
            class="float-right outline-none focus:outline-none"
            data-testid="dropdown__toggle"
          >
            <div
              class="sc-AxirZ eEbZjj"
              height="20"
              width="20"
            >
              <svg>
                settings.svg
              </svg>
            </div>
          </button>
        </div>
        <div />
      </div>
      <div>
        <div
          class="sc-AxiKw dYzaxp border-theme-primary-contrast -mr-2 border-theme-warning-200"
        >
          <div
            class="sc-AxirZ hPsuTj"
            height="16"
            width="16"
          />
        </div>
        <div
          class="sc-AxiKw cOBERQ border-theme-primary-contrast"
        />
      </div>
      <div
        class="mt-4 truncate max-w-12"
      >
        <div
          class="inline-block truncate"
        >
          <span
            class="text-theme-neutral-800 font-semibold max-w-24 flex-auto truncate mt-4 mr-1 text-base"
            data-testid="address__wallet-name"
          >
            My wallet
          </span>
          <span
            class="text-theme-neutral-400 font-semibold text-base"
            data-testid="address__wallet-address"
          >
            ASuu...3kqT
          </span>
        </div>
      </div>
      <div
        class="font-bold text-theme-neutral-800"
      >
        100,000 BTC
      </div>
    </div>
  </div>
</div>
`;

exports[`Formatted Address should render with wallet data and optional icon 1`] = `
<div>
  <div
    class="w-64 inline-block undefined"
  >
    <div
      class="sc-AxjAm hQFgsK"
    >
      <div>
        <div
          class="relative"
        >
          <button
            class="float-right outline-none focus:outline-none"
            data-testid="dropdown__toggle"
          >
            <div
              class="sc-AxirZ eEbZjj"
              height="20"
              width="20"
            >
              <svg>
                settings.svg
              </svg>
            </div>
          </button>
        </div>
        <div />
      </div>
      <div>
        <div
          class="sc-AxiKw dYzaxp border-theme-primary-contrast -mr-2 border-theme-warning-200"
        >
          <div
            class="sc-AxirZ hPsuTj"
            height="16"
            width="16"
          />
        </div>
        <div
          class="sc-AxiKw cOBERQ border-theme-primary-contrast"
        />
      </div>
      <div
        class="mt-4 truncate max-w-12"
      >
        <div
          class="inline-block truncate"
        >
          <span
            class="text-theme-neutral-800 font-semibold max-w-24 flex-auto truncate mt-4 mr-1 text-base"
            data-testid="address__wallet-name"
          >
            My wallet
          </span>
          <span
            class="text-theme-neutral-400 font-semibold text-base"
            data-testid="address__wallet-address"
          >
            ASuu...3kqT
          </span>
        </div>
      </div>
      <div
        class="font-bold text-theme-neutral-800"
      >
        100,000 BTC
      </div>
    </div>
  </div>
</div>
`;
s
